fix: disable edit triggers in script widget

--- a/src/plugins/scripts/scriptswidget.ui
+++ b/src/plugins/scripts/scriptswidget.ui
@@ -130,6 +130,9 @@
    </item>
    <item row="2" column="0" rowspan="6">
     <widget class="QTreeView" name="treeView">
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
      <property name="selectionMode">
       <enum>QAbstractItemView::SingleSelection</enum>
      </property>
