feat: disable order widget

--- a/src/plugins/scripts/scriptspowershellwidget.ui
+++ b/src/plugins/scripts/scriptspowershellwidget.ui
@@ -16,6 +16,9 @@
   <layout class="QGridLayout" name="gridLayout">
    <item row="11" column="0">
     <widget class="QComboBox" name="runComboBox">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <item>
       <property name="text">
        <string>Not configured</string>
