fix: fix multiple errors in scripts implementation (#44)
Following changes were made:
- fix: add sections to scripts
- fix: fix scripts display
- fix: fix logic of scripts loading
- fix: fix no section crash
- fix: scripts plugin: change ini files path and create default dirs
- fix: create folder for scripts
- fix: improve debug of genericwriter
- fix: fix add script widget navigation order
- fix: disable edit triggers in script widget
- fix: fix scripts category in scriptssnapinprivate.cpp
- feat: add power shell script order entries to combobox
- feat: set format to be utf16le in ini files
- feat: disable order widget
- fix: fix conversion to wide characters in iniformat
- chore: refactor io generic writer

--- a/src/plugins/scripts/scriptspowershellwidget.ui
+++ b/src/plugins/scripts/scriptspowershellwidget.ui
@@ -16,9 +16,22 @@
   <layout class="QGridLayout" name="gridLayout">
    <item row="11" column="0">
     <widget class="QComboBox" name="runComboBox">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <item>
       <property name="text">
        <string>Not configured</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Run PowerShell scripts first</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Run PowerShell scripts last</string>
       </property>
      </item>
     </widget>
