--- a/src/plugins/administrative_templates/ui/templatefilterdialog.ui
+++ b/src/plugins/administrative_templates/ui/templatefilterdialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+   <sizepolicy hsizetype="Fixed" vsizetype="MinimumExpanding">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -24,8 +24,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>598</width>
-    <height>546</height>
+    <width>897</width>
+    <height>900</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -34,6 +34,12 @@
   <layout class="QGridLayout" name="gridLayout_4">
    <item row="2" column="0" colspan="3">
     <widget class="QFrame" name="selectFrame">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="frameShape">
       <enum>QFrame::Box</enum>
      </property>
@@ -60,10 +66,16 @@
       </item>
       <item row="2" column="0">
        <widget class="QComboBox" name="configuredComboBox">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="minimumSize">
          <size>
-          <width>130</width>
-          <height>0</height>
+          <width>100</width>
+          <height>25</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -110,6 +122,12 @@
    </item>
    <item row="4" column="0" colspan="3">
     <widget class="QFrame" name="requireFrame">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="frameShape">
       <enum>QFrame::Box</enum>
      </property>
@@ -154,10 +172,13 @@
          <item row="2" column="0" rowspan="3">
           <widget class="QTreeView" name="platformTreeView">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
+            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
+           </property>
+           <property name="sortingEnabled">
+            <bool>false</bool>
            </property>
            <attribute name="headerVisible">
             <bool>false</bool>
@@ -235,6 +256,12 @@
    </item>
    <item row="3" column="0" colspan="3">
     <widget class="QFrame" name="kwordFrame">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="frameShape">
       <enum>QFrame::Box</enum>
      </property>
@@ -309,6 +336,12 @@
          </item>
          <item row="0" column="0">
           <widget class="QLabel" name="keywordLabel">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="text">
             <string>Filter for word(s):</string>
            </property>
@@ -329,22 +362,37 @@
          </item>
          <item row="0" column="4">
           <widget class="QComboBox" name="keywordComboBox">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>80</width>
+             <height>25</height>
+            </size>
+           </property>
            <property name="editable">
             <bool>false</bool>
            </property>
+           <property name="currentText">
+            <string>Match any word</string>
+           </property>
            <item>
             <property name="text">
-             <string>Any</string>
+             <string>Match any word</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>Yes</string>
+             <string>Match all words</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>No</string>
+             <string>Match exact</string>
             </property>
            </item>
           </widget>
@@ -363,7 +411,14 @@
           </widget>
          </item>
          <item row="0" column="1" colspan="3">
-          <widget class="QLineEdit" name="keywordLineEdit"/>
+          <widget class="QLineEdit" name="keywordLineEdit">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+          </widget>
          </item>
          <item row="1" column="2">
           <widget class="QCheckBox" name="helpCheckBox">
