Revert "fix: fix show files button in script dialog during smb connection"
This reverts commit 742e30b6a438c3667a29e07dc99352545639c299.

--- a/src/plugins/scripts/addscriptwidget.ui
+++ b/src/plugins/scripts/addscriptwidget.ui
@@ -17,7 +17,7 @@
    <item row="0" column="0">
     <widget class="QLabel" name="nameLabel">
      <property name="text">
-      <string>Script Path:</string>
+      <string>Script Name:</string>
      </property>
      <property name="buddy">
       <cstring>nameLineEdit</cstring>
@@ -43,7 +43,7 @@
    <item row="2" column="0">
     <widget class="QLabel" name="paramLabel">
      <property name="text">
-      <string>Script Arguments:</string>
+      <string>Script Parameters:</string>
      </property>
      <property name="buddy">
       <cstring>paramLineEdit</cstring>
