--- a/src/plugins/scripts/scriptsdialog.ui
+++ b/src/plugins/scripts/scriptsdialog.ui
@@ -10,6 +10,12 @@
     <height>300</height>
    </rect>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>750</width>
+    <height>800</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
