--- a/src/plugins/scripts/scriptswidget.ui
+++ b/src/plugins/scripts/scriptswidget.ui
@@ -118,7 +118,7 @@
       <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeType">
-      <enum>QSizePolicy::MinimumExpanding</enum>
+      <enum>QSizePolicy::Fixed</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
