--- a/src/plugins/scripts/addscriptwidget.ui
+++ b/src/plugins/scripts/addscriptwidget.ui
@@ -24,22 +24,6 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0" colspan="2">
-    <widget class="QLineEdit" name="nameLineEdit"/>
-   </item>
-   <item row="1" column="2">
-    <widget class="QPushButton" name="browsePushButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string>Browse...</string>
-     </property>
-    </widget>
-   </item>
    <item row="2" column="0">
     <widget class="QLabel" name="paramLabel">
      <property name="text">
@@ -49,9 +33,6 @@
       <cstring>paramLineEdit</cstring>
      </property>
     </widget>
-   </item>
-   <item row="3" column="0" colspan="2">
-    <widget class="QLineEdit" name="paramLineEdit"/>
    </item>
    <item row="4" column="1">
     <widget class="QPushButton" name="okPushButton">
@@ -73,13 +54,47 @@
      </property>
     </widget>
    </item>
+   <item row="3" column="0" colspan="3">
+    <widget class="QLineEdit" name="paramLineEdit"/>
+   </item>
+   <item row="2" column="2">
+    <widget class="QPushButton" name="browsePushButton">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>Browse...</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="3">
+    <widget class="QLineEdit" name="nameLineEdit"/>
+   </item>
+   <item row="4" column="0">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
   </layout>
  </widget>
  <tabstops>
   <tabstop>okPushButton</tabstop>
   <tabstop>nameLineEdit</tabstop>
   <tabstop>paramLineEdit</tabstop>
-  <tabstop>browsePushButton</tabstop>
   <tabstop>cancelPushButton</tabstop>
  </tabstops>
  <resources/>
