--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -110,6 +110,7 @@
      <string>&amp;View</string>
     </property>
     <addaction name="actionLanguage"/>
+    <addaction name="actionSettings"/>
    </widget>
    <widget class="QMenu" name="menu_Help">
     <property name="title">
@@ -308,6 +309,11 @@
   <action name="actionManual">
    <property name="text">
     <string>&amp;Manual</string>
+   </property>
+  </action>
+  <action name="actionSettings">
+   <property name="text">
+    <string>&amp;Settings</string>
    </property>
   </action>
  </widget>
