fix: fix scripts ui

--- a/src/plugins/scripts/addscriptwidget.ui
+++ b/src/plugins/scripts/addscriptwidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>163</height>
+    <height>164</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <item row="0" column="0">
     <widget class="QLabel" name="nameLabel">
      <property name="text">
-      <string>Script Path:</string>
+      <string>Script Name:</string>
      </property>
      <property name="buddy">
       <cstring>nameLineEdit</cstring>
