--- a/src/plugins/preferences/shares/shareswidget.ui
+++ b/src/plugins/preferences/shares/shareswidget.ui
@@ -100,7 +100,7 @@ Modifiers:</string>
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="shareNameLineEdit">
+      <widget class="preferences::ShortcutLineEdit" name="shareNameLineEdit">
        <property name="text">
         <string/>
        </property>
@@ -114,7 +114,7 @@ Modifiers:</string>
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="folderPathLineEdit">
+      <widget class="preferences::ShortcutLineEdit" name="folderPathLineEdit">
        <property name="text">
         <string/>
        </property>
@@ -128,7 +128,7 @@ Modifiers:</string>
       </widget>
      </item>
      <item row="2" column="1" colspan="2">
-      <widget class="QLineEdit" name="commentLineEdit">
+      <widget class="preferences::ShortcutLineEdit" name="commentLineEdit">
        <property name="text">
         <string/>
        </property>
@@ -412,6 +412,13 @@ Enumeration:</string>
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>preferences::ShortcutLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>common/shortcutlineedit.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
