--- a/src/plugins/preferences/folders/folderswidget.ui
+++ b/src/plugins/preferences/folders/folderswidget.ui
@@ -97,7 +97,7 @@
      <item row="0" column="1">
       <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="0">
-        <widget class="QLineEdit" name="pathLineEdit">
+        <widget class="preferences::ShortcutLineEdit" name="pathLineEdit">
          <property name="text">
           <string>Placeholder</string>
          </property>
@@ -257,6 +257,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>preferences::ShortcutLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>common/shortcutlineedit.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
