fix: fix attributes group box size

--- a/src/plugins/preferences/files/fileswidget.ui
+++ b/src/plugins/preferences/files/fileswidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>383</width>
-    <height>366</height>
+    <height>370</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -184,7 +184,7 @@
       <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeType">
-      <enum>QSizePolicy::MinimumExpanding</enum>
+      <enum>QSizePolicy::Expanding</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
